gcc-9 (9.2.1-17) UNRELEASED; urgency=medium

  * Update to SVN 20191102 (r277743) from the gcc-9-branch.
  * Update gm2 from the gcc_9_2_0_gm2 branch 20191031, more parallel
    build issues.
  * Regenerate ada-libgnatvsn.diff with automake 1.15.1 and autoconf 2.69.

 -- Matthias Klose <doko@debian.org>  Thu, 31 Oct 2019 19:04:40 +0100

gcc-9 (9.2.1-16) unstable; urgency=medium

  * Update to SVN 20191030 (r277619) from the gcc-9-branch.
    - Fix PR target/92225 (x86), PR rtl-optimization/92007,
      PR target/70010 (PPC), PR target/65342 (PPC), PR target/67183,
      PR fortran/91926, PR fortran/91863, PR fortran/86248, PR c++/92201.
  * Use a proper configure check when linking with libatomic in libgnatvsn.
    Closes: #943796.
  * Enable gm2 on x32.
  * Update gm2 from the gcc_9_2_0_gm2 branch 20191030, parallel build issues.
  * Fix PR libstdc++/92267, taken from the trunk.

 -- Matthias Klose <doko@debian.org>  Wed, 30 Oct 2019 13:13:31 +0100

gcc-9 (9.2.1-15) unstable; urgency=medium

  * Update to SVN 20191027 (r277486) from the gcc-9-branch.
    - Fix PR c++/85254.
  * Update gm2 from the gcc_9_2_0_gm2 branch 20191026.
  * Link libgnatvsn against libatomic.

 -- Matthias Klose <doko@debian.org>  Sun, 27 Oct 2019 18:08:50 +0100

gcc-9 (9.2.1-14) unstable; urgency=medium

  * Update to SVN 20191025 (r277460) from the gcc-9-branch.
    - Fix PR libstdc++/90682, PR libstdc++/61761, PR libstdc++/89164,
      PR libstdc++/92143, PR libstdc++/91456, PR libstdc++/92059,
      PR libstdc++/91748, PR tree-optimization/91885, PR debug/91887,
      PR tree-optimization/92131, PR c++/92062, PR fortran/92174,
      PR target/88167 (ARM), PR middle-end/92153.
  * Configure again with --enable-objc-gc=auto, somehow dropped in gcc-9.
    Closes: #942049.
  * Revert the libgnatvsn changes from 9.2.1-9.

 -- Matthias Klose <doko@debian.org>  Fri, 25 Oct 2019 19:31:48 +0200

gcc-9 (9.2.1-12) unstable; urgency=medium
