@@ -45,7 +45,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 
 --- /dev/null
 +++ b/src/libgnatvsn/configure.ac
-@@ -0,0 +1,81 @@
+@@ -0,0 +1,163 @@
 +# Configure script for libgnatvsn.
 +#   Copyright (C) 2006 Ludovic Brenta <ludovic@ludovic-brenta.org>
 +#   Copyright (C) 2017-2019 Nicolas Boulenguez <nicolas@debian.org>
@@ -65,9 +65,99 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +# <http://www.gnu.org/licenses/>.
 +
 +AC_INIT([gnatvsn], [version-unused])
++
++# Gets build, host, target, *_vendor, *_cpu, *_os, etc.
++#
++# You will slowly go insane if you do not grok the following fact:  when
++# building this library, the top-level /target/ becomes the library's /host/.
++#
++# configure then causes --target to default to --host, exactly like any
++# other package using autoconf.  Therefore, 'target' and 'host' will
++# always be the same.  This makes sense both for native and cross compilers
++# just think about it for a little while.  :-)
++#
++# Also, if this library is being configured as part of a cross compiler, the
++# top-level configure script will pass the "real" host as $with_cross_host.
++#
++# Do not delete or change the following two lines.  For why, see
++# http://gcc.gnu.org/ml/libstdc++/2003-07/msg00451.html
++AC_CANONICAL_SYSTEM
++target_alias=${target_alias-$host_alias}
++
++# Sets up automake.  Must come after AC_CANONICAL_SYSTEM.  Each of the
++# following is magically included in AUTOMAKE_OPTIONS in each Makefile.am.
++#  1.9.0:  minimum required version
++#  no-define:  PACKAGE and VERSION will not be #define'd in config.h (a bunch
++#              of other PACKAGE_* variables will, however, and there's nothing
++#              we can do about that; they come from AC_INIT).
++#  foreign:  we don't follow the normal rules for GNU packages (no COPYING
++#            file in the top srcdir, etc, etc), so stop complaining.
++#  no-dist:  we don't want 'dist' and related rules.
++#  -Wall:  turns on all automake warnings...
++#  -Wno-portability:  ...except this one, since GNU make is required.
++#  -Wno-override: ... and this one, since we do want this in testsuite.
++#
++# A warning says: You are advised to start using 'subdir-objects'
++# option throughout your automake: project, to avoid future
++# incompatibilities.
++AM_INIT_AUTOMAKE([1.9.0 foreign no-dist subdir-objects -Wall -Wno-portability -Wno-override])
++dnl gnat isn't multilib'd, don't enable it here
++dnl AM_ENABLE_MULTILIB(, ..)
++
++# Calculate toolexeclibdir
++# Also toolexecdir, though it's only used in toolexeclibdir
++case ${enable_version_specific_runtime_libs} in
++  yes)
++    # Need the gcc compiler version to know where to install libraries
++    # and header files if --enable-version-specific-runtime-libs option
++    # is selected.
++    toolexecdir='$(libdir)/gcc/$(target_alias)'
++    toolexeclibdir='$(toolexecdir)/$(gcc_version)$(MULTISUBDIR)'
++    ;;
++  no)
++    if test -n "$with_cross_host" &&
++       test x"$with_cross_host" != x"no"; then
++      # Install a library built with a cross compiler in tooldir, not libdir.
++      toolexecdir='$(exec_prefix)/$(target_alias)'
++      toolexeclibdir='$(toolexecdir)/lib'
++    else
++      toolexecdir='$(libdir)/gcc-lib/$(target_alias)'
++      toolexeclibdir='$(libdir)'
++    fi
++    multi_os_directory=`$CC -print-multi-os-directory`
++    case $multi_os_directory in
++      .) ;; # Avoid trailing /.
++      *) toolexeclibdir=$toolexeclibdir/$multi_os_directory ;;
++    esac
++    ;;
++esac
++AC_SUBST(toolexecdir)
++AC_SUBST(toolexeclibdir)
++
++# Check the compiler.
++# The same as in boehm-gc and libstdc++. Have to borrow it from there.
++# We must force CC to /not/ be precious variables; otherwise
++# the wrong, non-multilib-adjusted value will be used in multilibs.
++# As a side effect, we have to subst CFLAGS ourselves.
++
++m4_rename([_AC_ARG_VAR_PRECIOUS],[real_PRECIOUS])
++m4_define([_AC_ARG_VAR_PRECIOUS],[])
++AC_PROG_CC
++m4_rename_force([real_PRECIOUS],[_AC_ARG_VAR_PRECIOUS])
++
++AC_SUBST(CFLAGS)
++
++AM_PROG_AR
++
++# Configure libtool
++AM_PROG_LIBTOOL
++ACX_LT_HOST_FLAGS
++AC_SUBST(enable_shared)
++AC_SUBST(enable_static)
++AM_MAINTAINER_MODE
++
 +AC_CONFIG_SRCDIR([gnatvsn.gpr.in])
 +AC_CONFIG_MACRO_DIR([..])
-+AC_PROG_CC
 +AC_PROG_MKDIR_P
 +AC_PROG_LN_S
 +AC_PROG_SED
@@ -95,14 +185,6 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +
 +ACX_PKGVERSION([GCC])
 +AC_DEFINE_UNQUOTED([PKGVERSION], ["$PKGVERSION"])
-+
-+# A warning says: You are advised to start using 'subdir-objects'
-+# option throughout your automake: project, to avoid future
-+# incompatibilities.
-+AM_INIT_AUTOMAKE([foreign no-define no-dist subdir-objects -Wall -Werror])
-+AM_PROG_AR
-+
-+LT_INIT
 +
 +# Get target configury for libatomic.
 +. ${srcdir}/../libatomic/configure.tgt
@@ -472,7 +554,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
      }
 --- /dev/null
 +++ b/src/libgnatvsn/Makefile.in
-@@ -0,0 +1,923 @@
+@@ -0,0 +1,935 @@
 +# Makefile.in generated by automake 1.15.1 from Makefile.am.
 +# @configure_input@
 +
@@ -582,6 +664,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +POST_UNINSTALL = :
 +build_triplet = @build@
 +host_triplet = @host@
++target_triplet = @target@
 +subdir = .
 +ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 +am__aclocal_m4_deps = $(top_srcdir)/../libtool.m4 \
@@ -589,6 +672,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +	$(top_srcdir)/../ltversion.m4 $(top_srcdir)/../lt~obsolete.m4 \
 +	$(top_srcdir)/../config/depstand.m4 \
 +	$(top_srcdir)/../config/lead-dot.m4 \
++	$(top_srcdir)/../config/lthostflags.m4 \
 +	$(top_srcdir)/../config/override.m4 \
 +	$(top_srcdir)/../config/acx.m4 $(top_srcdir)/configure.ac
 +am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -761,6 +845,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +LIPO = @LIPO@
 +LN_S = @LN_S@
 +LTLIBOBJS = @LTLIBOBJS@
++MAINT = @MAINT@
 +MAKEINFO = @MAKEINFO@
 +MKDIR_P = @MKDIR_P@
 +NM = @NM@
@@ -809,6 +894,8 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +datarootdir = @datarootdir@
 +docdir = @docdir@
 +dvidir = @dvidir@
++enable_shared = @enable_shared@
++enable_static = @enable_static@
 +exec_prefix = @exec_prefix@
 +get_gcc_base_ver = @get_gcc_base_ver@
 +host = @host@
@@ -824,6 +911,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +libexecdir = @libexecdir@
 +localedir = @localedir@
 +localstatedir = @localstatedir@
++lt_host_flags = @lt_host_flags@
 +mandir = @mandir@
 +mkdir_p = @mkdir_p@
 +oldincludedir = @oldincludedir@
@@ -835,7 +923,13 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +sharedstatedir = @sharedstatedir@
 +srcdir = @srcdir@
 +sysconfdir = @sysconfdir@
++target = @target@
 +target_alias = @target_alias@
++target_cpu = @target_cpu@
++target_os = @target_os@
++target_vendor = @target_vendor@
++toolexecdir = @toolexecdir@
++toolexeclibdir = @toolexeclibdir@
 +top_build_prefix = @top_build_prefix@
 +top_builddir = @top_builddir@
 +top_srcdir = @top_srcdir@
@@ -983,7 +1077,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +.SUFFIXES: .c .lo .o .obj
 +am--refresh: Makefile
 +	@:
-+$(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
++$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__configure_deps)
 +	@for dep in $?; do \
 +	  case '$(am__configure_deps)' in \
 +	    *$$dep*) \
@@ -1009,9 +1103,9 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +$(top_builddir)/config.status: $(top_srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 +	$(SHELL) ./config.status --recheck
 +
-+$(top_srcdir)/configure:  $(am__configure_deps)
++$(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 +	$(am__cd) $(srcdir) && $(AUTOCONF)
-+$(ACLOCAL_M4):  $(am__aclocal_m4_deps)
++$(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 +	$(am__cd) $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
 +$(am__aclocal_m4_deps):
 +
@@ -1398,7 +1492,7 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +.NOEXPORT:
 --- /dev/null
 +++ b/src/libgnatvsn/aclocal.m4
-@@ -0,0 +1,1201 @@
+@@ -0,0 +1,1238 @@
 +# generated automatically by aclocal 1.15.1 -*- Autoconf -*-
 +
 +# Copyright (C) 1996-2017 Free Software Foundation, Inc.
@@ -2087,6 +2181,42 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +fi
 +AC_SUBST([install_sh])])
 +
++# Add --enable-maintainer-mode option to configure.         -*- Autoconf -*-
++# From Jim Meyering
++
++# Copyright (C) 1996-2017 Free Software Foundation, Inc.
++#
++# This file is free software; the Free Software Foundation
++# gives unlimited permission to copy and/or distribute it,
++# with or without modifications, as long as this notice is preserved.
++
++# AM_MAINTAINER_MODE([DEFAULT-MODE])
++# ----------------------------------
++# Control maintainer-specific portions of Makefiles.
++# Default is to disable them, unless 'enable' is passed literally.
++# For symmetry, 'disable' may be passed as well.  Anyway, the user
++# can override the default with the --enable/--disable switch.
++AC_DEFUN([AM_MAINTAINER_MODE],
++[m4_case(m4_default([$1], [disable]),
++       [enable], [m4_define([am_maintainer_other], [disable])],
++       [disable], [m4_define([am_maintainer_other], [enable])],
++       [m4_define([am_maintainer_other], [enable])
++        m4_warn([syntax], [unexpected argument to AM@&t@_MAINTAINER_MODE: $1])])
++AC_MSG_CHECKING([whether to enable maintainer-specific portions of Makefiles])
++  dnl maintainer-mode's default is 'disable' unless 'enable' is passed
++  AC_ARG_ENABLE([maintainer-mode],
++    [AS_HELP_STRING([--]am_maintainer_other[-maintainer-mode],
++      am_maintainer_other[ make rules and dependencies not useful
++      (and sometimes confusing) to the casual installer])],
++    [USE_MAINTAINER_MODE=$enableval],
++    [USE_MAINTAINER_MODE=]m4_if(am_maintainer_other, [enable], [no], [yes]))
++  AC_MSG_RESULT([$USE_MAINTAINER_MODE])
++  AM_CONDITIONAL([MAINTAINER_MODE], [test $USE_MAINTAINER_MODE = yes])
++  MAINT=$MAINTAINER_MODE_TRUE
++  AC_SUBST([MAINT])dnl
++]
++)
++
 +# Check to see how 'make' treats includes.	            -*- Autoconf -*-
 +
 +# Copyright (C) 2001-2017 Free Software Foundation, Inc.
@@ -2599,4 +2729,5 @@ should also be added. autoreconf -fi' rebuilds all 3 files.
 +m4_include([../lt~obsolete.m4])
 +m4_include([../config/depstand.m4])
 +m4_include([../config/lead-dot.m4])
++m4_include([../config/lthostflags.m4])
 +m4_include([../config/override.m4])
