@@ -3,9 +3,11 @@ gcc-9 (9.2.1-17) UNRELEASED; urgency=medium
   * Update to SVN 20191102 (r277743) from the gcc-9-branch.
   * Update gm2 from the gcc_9_2_0_gm2 branch 20191031, more parallel
     build issues.
-  * Regenerate ada-libgnatvsn.diff with automake 1.15.1 and autoconf 2.69.
+  * ada-libgnatvsn.diff:
+    - Copy some of configure.ac's common stuff from libatomic/libgomp.
+    - Regenerate with automake 1.15.1 and autoconf 2.69.
 
- -- Matthias Klose <doko@debian.org>  Thu, 31 Oct 2019 19:04:40 +0100
+ -- Matthias Klose <doko@debian.org>  Sun, 03 Nov 2019 10:37:13 +0100
 
 gcc-9 (9.2.1-16) unstable; urgency=medium
 
